# multimodal-data-web-scaler

./: .gitignore  LICENSE  README.md  config.yaml  demo.md  pyproject.toml  run.py  sample_urls.txt
.claude/: settings.local.json
cosmos_curator/: __init__.py  config.py  extractors.py  filters.py  pipeline.py
